# haveyoubeenlogged

./: Cargo.toml  README.md
src/: main.rs
templates/: index.html
